    * FIX: Do load *all* users from htpasswd, so passwords from
      users not created via WATO will not be lost.
    * FIX: honor site disabling in replication module
    * FIX: honor write permissions on folder in "bulk delete"
    * FIX: honor permissions for "bulk cleanup" and "bulk edit"
    * FIX: honor write permissions and source folder when moving hosts

    Checks & Agents:
    * hpux_if: fix missing default parameter errors
    * hpux_if: make configurable via WATO
    * if.include: fix handling of NIC with index 0
    * hpux_lunstats: new check for disk IO on HP-UX
    * windows - mk_oracle tablespace: Added missing sid column
    * diskstat: make inventory mode configurable via WATO
    * added new checks for Fujitsu ETERNUS DX80 S2 
      (thanks to Philipp Höfflin)
    * Fix Perf-O-Meter of fileage
    * hpux_snmp_cs.cpu: new SNMP check for CPU utilization
      on HP-UX.
    * if/if64: inventory also picks up type 62 (fastEther). This
      is needed on Cisco WLC 21xx series (thanks to Ralf Ertzinger)
    * FIX: fix inventory of f5_bigip_temp
    * mk_oracle (lnx+win): Fixed TEMP tablespace size calculations
    * ps: output node process is running on (only for clusters)

    Multisite:
    * Added several missing localization stringsw
    * IE: Fixed problem with clicking SELECT fields in the new wato foldertree snapin
    * Fixed problem when trying to visit dashboards from new wato foldertree snapin
    * Chrome: Fixed styling problem of foldertree snapin
    * Views: Only show the commands and row selection options for views where
      commands are possible
    * The login mask honors the default_language definition now
    * check_bi_local.py: works now with cookie based authentication
    * FIX: Fixed wrong redirection after login in some cases
    * FIX: Fixed missing stats grouping in alert statistics view
    * FIX: Fixed preview table styling in view editor
    * FIX: Multisite authed users without permission to multisite are